--- a/src/ribbon.less
+++ b/src/ribbon.less
@@ -8,6 +8,7 @@
     order: 1000;
     display: flex;
     flex-wrap: wrap;
+    margin-bottom: 1px !important;
 
     // Move the ribbon tab bar to the bottom.
     & > div {
